feat: add html elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,55 @@
 
 <body>
 
+	<section class="container">
+		<header class="hero">
+			<h2 class="hero__title">Join our community</h2>
+			<p class="hero__subtitle">30-day, hassle-free money back guarantee</p>
+			<p class="hero__description">Gain access to our full library of tutorials along with expert code reviews. Perfect
+				for any developers who are serious about honing their skills.</p>
+		</header>
 
+		<div class="subscription">
+			<h3 class="subscription__title">Monthly Subscription</h3>
+			<p class="subscription__price">$29 <small class="subscription__duration">per month</small></p>
+			<p class="subscription__description">Full access for less than $1 a day</p>
+			<button class="subscription__button">Sign Up</button>
+		</div>
+
+		<div class="why">
+			<h3 class="why__title">Why Us</h3>
+			<ul class="why__list">
+				<li class="why__item">
+					<a href="#"
+						class="why__link">Tutorials by industry experts</a>
+				</li>
+				<li class="why__item">
+					<a href="#"
+						class="why__link">Peer & expert code review</a>
+				</li>
+				<li class="why__item">
+					<a href="#"
+						class="why__link">Coding exercises</a>
+				</li>
+				<li class="why__item">
+					<a href="#"
+						class="why__link">Access to our GitHub repos</a>
+				</li>
+				<li class="why__item">
+					<a href="#"
+						class="why__link">Community forum</a>
+				</li>
+				<li class="why__item">
+					<a href="#"
+						class="why__link">Flashcard decks</a>
+				</li>
+				<li class="why__item">
+					<a href="#"
+						class="why__link">New videos every week</a>
+				</li>
+			</ul>
+		</div>
+	</section>
 
 </body>
 
