feat: add css styles

--- a/index.html
+++ b/index.html
@@ -3,75 +3,69 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible"
-		content="IE=edge">
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1.0">
+	<meta
+		content="IE=edge"
+		http-equiv="X-UA-Compatible"
+	>
+	<meta
+		content="width=device-width, initial-scale=1.0"
+		name="viewport"
+	>
 
-	<link rel="preconnect"
-		href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
-		rel="stylesheet">
+	<link
+		href="https://fonts.gstatic.com"
+		rel="preconnect"
+	>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+		rel="stylesheet"
+	>
 
-	<link rel="stylesheet"
-		href="./css/style.css">
+	<link
+		href="./css/style.css"
+		rel="stylesheet"
+	>
 
-	<link rel="shortcut icon"
+	<link
 		href="./assets/avatar256.png"
-		type="image/x-icon">
+		rel="shortcut icon"
+		type="image/x-icon"
+	>
 	<title>Frontend Mentor | Single Price Grid Component</title>
 </head>
 
-<body>
+<body id="p-index">
 
-	<section class="container">
+	<section id="enroll">
+
 		<header class="hero">
 			<h2 class="hero__title">Join our community</h2>
 			<p class="hero__subtitle">30-day, hassle-free money back guarantee</p>
-			<p class="hero__description">Gain access to our full library of tutorials along with expert code reviews. Perfect
-				for any developers who are serious about honing their skills.</p>
+			<p class="hero__description">Gain access to our full library of tutorials along with expert
+				code reviews. Perfect for any developers who are serious about honing their skills.</p>
 		</header>
 
-		<div class="subscription">
-			<h3 class="subscription__title">Monthly Subscription</h3>
-			<p class="subscription__price">$29 <small class="subscription__duration">per month</small></p>
-			<p class="subscription__description">Full access for less than $1 a day</p>
-			<button class="subscription__button">Sign Up</button>
+		<div class="terms">
+			<h3 class="terms__title">Monthly Subscription</h3>
+			<p class="terms__price">$29</p>
+			<p class="terms__duration">per month</p>
+			<p class="terms__description">Full access for less than $1 a day</p>
+			<button class="terms__btn">Sign Up</button>
 		</div>
 
 		<div class="why">
 			<h3 class="why__title">Why Us</h3>
 			<ul class="why__list">
-				<li class="why__item">
-					<a href="#"
-						class="why__link">Tutorials by industry experts</a>
-				</li>
-				<li class="why__item">
-					<a href="#"
-						class="why__link">Peer & expert code review</a>
-				</li>
-				<li class="why__item">
-					<a href="#"
-						class="why__link">Coding exercises</a>
-				</li>
-				<li class="why__item">
-					<a href="#"
-						class="why__link">Access to our GitHub repos</a>
-				</li>
-				<li class="why__item">
-					<a href="#"
-						class="why__link">Community forum</a>
-				</li>
-				<li class="why__item">
-					<a href="#"
-						class="why__link">Flashcard decks</a>
-				</li>
-				<li class="why__item">
-					<a href="#"
-						class="why__link">New videos every week</a>
-				</li>
+				<li class="why__item">Tutorials by industry experts</li>
+				<li class="why__item">Peer & expert code review</li>
+				<li class="why__item">Coding exercises</li>
+				<li class="why__item">Access to our GitHub repos</li>
+				<li class="why__item">Community forum</li>
+				<li class="why__item">Flashcard decks</li>
+				<li class="why__item">New videos every week</li>
 			</ul>
 		</div>
+
 	</section>
 
 </body>
